[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,29 @@
 <html>
 
+    <head>
+        <title>Article One | Shuvo Kumar</title>
+        </head>
+<body>
+    <div>
+        <a href="/">Home</a>
+    </div>
+    <hr/>
+    <h3>
+        Article One
+    </h3>
+    <div>
+        Sep 27, 2016
+    </div>
+    <div>
+        <p>
+            This is the content of the first article. Yada yada. This is the content of the first article. Yada yada. This is the content of the first article. Yada yada. This is the content of the first article. Yada yada. This is the content of the first article. Yada yada.
+        </p>
+        <p>
+            This is the content of the first article. Yada yada. This is the content of the first article. Yada yada. This is the content of the first article. Yada yada. This is the content of the first article. Yada yada. This is the content of the first article. Yada yada.
+        </p>
+        <p>
+            This is the content of the first article. Yada yada. This is the content of the first article. Yada yada. This is the content of the first article. Yada yada. This is the content of the first article. Yada yada. This is the content of the first article. Yada yada.
+        </p>
+    </div>
+</body>
 </html>
